--- a/src/app/Modules/cart-order/cart-order.component.html
+++ b/src/app/Modules/cart-order/cart-order.component.html
@@ -81,7 +81,7 @@
     <div class="container-cartorder__line-two"></div>
     <div class="container-cartorder__order-title">Order placement</div>
     <div class="container-cartorder__form">
-      <div class="error-get-user" *ngIf="!this.error">
+      <div class="error-get-user" *ngIf="!isLoggedIn">
         Error! You are not registered in the system. Try to register or sign in!
       </div>
       <form
@@ -99,7 +99,6 @@
             id="inputFirstName"
             required
             formControlName="firstName"
-            [(ngModel)]="user.firstName"
           />
           <label class="container__input-firstname" for="inputFirstName"
             >First name<span class="container__star">*</span>
@@ -111,30 +110,23 @@
         <div
           class="container__lastname"
           errorDirective
-          [formControlItem]="deliveryName"
+          [formControlItem]="lastName"
         >
           <input
             type="text"
             id="inputLastName"
             required
-            formControlName="deliveryName"
-            [(ngModel)]="user.lastName"
+            formControlName="lastName"
           />
           <label class="container__input-lastname" for="inputLastName"
             >Last name<span class="container__star">*</span>
           </label>
           <app-cart-order-error-form
-            [formControlItem]="deliveryName"
+            [formControlItem]="lastName"
           ></app-cart-order-error-form>
         </div>
         <div class="container__email" errorDirective [formControlItem]="email">
-          <input
-            type="text"
-            id="inputEmail"
-            required
-            formControlName="email"
-            [(ngModel)]="user.email"
-          />
+          <input type="text" id="inputEmail" required formControlName="email" />
           <label class="container__input-email" for="inputEmail"
             >Email<span class="container__star">*</span></label
           >
@@ -152,7 +144,6 @@
             id="inputPhone"
             required
             formControlName="phone"
-            [(ngModel)]="user.phone"
           />
           <label class="container__input-phone" for="inputPhone"
             >Phone number<span class="container__star">*</span></label
@@ -177,9 +168,8 @@
           <input
             type="text"
             id="inputAddress"
-            formControlName="deliveryAddress"
+            formControlName="homeAddress"
             placeholder=" "
-            [(ngModel)]="user.homeAddress"
           />
           <label class="container__input-address" for="inputAddress"
             >Address
@@ -194,7 +184,6 @@
             id="inputInfo"
             formControlName="additionalInformation"
             placeholder=" "
-            [(ngModel)]="user.additionalInformation"
           ></textarea>
           <label class="container__input-info" for="inputInfo"
             >Additional information</label
