--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -11,7 +11,7 @@
     <div class="container-item">
       <app-home-items></app-home-items>
     </div>
-    <button class="container-home__button">
+    <button class="container-home__button" routerLink="/catalog">
       <p class="container__parag">Browse catalog</p>
     </button>
     <div class="container-home__information">
