--- a/src/app/Modules/filter/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.html
@@ -52,7 +52,8 @@
 <div
   class="container-pagination"
   *ngIf="
-    itemsLength
+    itemsData
+      | async
       | filter: categoriesFilterName
       | checkbox: categoriesCheckedName
       | cost: rangeValues
