fix number bugs

--- a/src/app/Modules/catalog/catalog-categories/product-details.component.html
+++ b/src/app/Modules/catalog/catalog-categories/product-details.component.html
@@ -46,12 +46,14 @@
             [src]="getPhoto(item.photo)"
             alt="itemImage"
             (click)="getFirstElement()"
+            [ngClass]="{ active: !isActive }"
           />
           <img
             id="itemImageMini"
             src="../../../../assets/img-home/itemImageRepeat.png"
             alt="itemImage"
             (click)="getSecondElement()"
+            [ngClass]="{ active: isActive }"
           />
         </div>
       </div>
