--- a/src/app/Modules/search/search.component.scss
+++ b/src/app/Modules/search/search.component.scss
@@ -35,7 +35,7 @@
         background: $color_white;
         border-radius: 4px;
         height: 7.6rem;
-        @include font(Montserrat, normal, normal, 1.8rem, 150%, 0em, $color_grey);
+        @include font(Montserrat, normal, normal, 1.8rem, 150%, 0em, $color_darkgrey);
         padding-left: 2.9rem;
         &:focus {
             box-shadow: 2px 5px 1px $color_grey;
