--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -69,7 +69,7 @@
     position: fixed;
     bottom: 2.4rem;
     right: 2.4rem;
-    z-index: 9;
+    z-index: 101;
 }
 .container__chart-button:hover {
     bottom: 2.3rem;
@@ -114,8 +114,9 @@
 }
 .container__chart-body-messages {
     margin-bottom: 3rem;
-    position: absolute;
-    bottom: 12rem;
+    height: 49rem;
+    display: flex;
+    flex-direction: column-reverse;
 }
 .your-message {
     display: flex;
@@ -141,6 +142,7 @@
 .server-message {
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 3rem;
 }
 .container__chart-body-servermessage {
     @include font(Montserrat, normal, 400, 1.6rem, 170%, 0em, $color_darkgrey);
@@ -212,6 +214,58 @@
         opacity: 1;
         bottom: 2.4rem;
         right: 10.2rem;
+    }
+}
+@media (max-width: 670px) {
+    .container__chart {
+        border: none;
+        @include wihi(100%, 100%);
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        background: $color_white;
+    }
+    .container__input {
+        @include wihi(33.5rem, 7.6rem);
+    }
+    .container__chart-button {
+        @include wihi(4.5rem, 4.5rem);
+        bottom: 0.2rem;
+        right: 0.5rem;
+    }
+    .container__chart-button:hover {
+        bottom: 0.1rem;
+        right: 0.4rem;
+    }
+    .container__chart-header {
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+    }
+    .container__chart-header-title {
+        margin: 2.4rem 0 0 2.4rem;
+    }
+    .container__chart-body {
+        @include wihi(100%, 100%);
+        padding: 3rem 0 3rem 2rem;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+    .container__chart-body-messages {
+        margin-bottom: 3rem;
+        height: 78%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .container-item {
+        margin-left: 0;
+    }
+    .close-chart-button {
+        position: absolute;
+        top: 0;
+        right: 2.4rem;
     }
 }
 @media (max-width: 500px) {
