create adaptive,dynamic google map

--- a/src/app/Modules/map/map.component.html
+++ b/src/app/Modules/map/map.component.html
@@ -18,17 +18,20 @@
     <span class="container__minsk">Delivery area - Minsk</span>
   </div>
 </div>
-<div class="googlemap">
+<div class="googlemap" id="map">
   <agm-map
     [latitude]="latMap"
     [longitude]="lngMap"
     [zoom]="zoom"
-    backgroundColor="grey"
+    (mapClick)="mapReadyHandler()"
+    [styles]="styles"
   >
     <agm-polygon
       [paths]="paths"
-      fillColor="rgb(255,158,177)"
+      [clickable]="true"
+      fillColor="rgb(255,190,200)"
       strokeColor="#ff5d7d"
+      (polyClick)="getCoords($event)"
     >
     </agm-polygon>
     <agm-marker
@@ -36,6 +39,7 @@
       [longitude]="lng"
       iconUrl="../../../assets/img-registration/arrow.png"
       [zIndex]="99999999999999"
+      [markerDraggable]="true"
     >
     </agm-marker>
   </agm-map>
@@ -47,4 +51,16 @@
     />
     <span class="container__minsk">Delivery area - Minsk</span>
   </div>
+</div>
+<div class="popup" *ngIf="alertShow">
+  <div class="container__popup-exit">
+    <img
+      src="../../../assets/img-registration/x.png"
+      alt="close"
+      (click)="closeAlert()"
+    />
+  </div>
+  <p class="container__popup-text11">
+    Sorry, we cannot deliver outside the delivery zone.
+  </p>
 </div>
